--- a/exercise/ex3.html
+++ b/exercise/ex3.html
@@ -9,12 +9,12 @@
 <p><a href="http://yontobt.pixnet.net/blog/post/192698419-%E3%80%90%E5%8F%B0%E7%81%A3%E7%BE%8E%E9%A3%9F%E3%80%91cnn%E6%8E%A8%E8%96%A6%E5%A0%B1%E5%B0%8E%EF%BC%8C%E5%8F%B0%E7%81%A3%E5%BF%85%E5%90%83%E7%9A%8440%E9%81%93%E7%BE%8E">美食介紹</a></p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ46k0EeELEEVA98zzODE0rKzevNDqRwyun5zoTdRihVHJJeipA7A"  />
 
-</body><table border="1">
+<table border="1">
 <tr>
   <td>小籠包</td>
   <td>珍珠奶茶</td>
   <td>臭豆腐</td>
 </tr>
 </table>
-
+</body>
 </html>
