--- a/exercise/test/bootstrap.html
+++ b/exercise/test/bootstrap.html
@@ -33,7 +33,7 @@
         }
     </style>
     <!-- Custom styles for this template -->
-    <link href="https://getbootstrap.com/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/4.3/examples/pricing/pricing.css" rel="stylesheet">
 </head>
 
 <body>
@@ -106,7 +106,7 @@
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
                 <div class="col-12 col-md">
-                    <img class="mb-2" src="https://getbootstrap.com/docs/4.3/dist/css/bootstrap.min.css" alt="" width="24" height="24">
+                    <img class="mb-2" src="https://getbootstrap.com/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
                     <small class="d-block mb-3 text-muted">&copy; 2017-2019</small>
                 </div>
                 <div class="col-6 col-md">
