--- a/exercise/final/ylkf.html
+++ b/exercise/final/ylkf.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,7 +6,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>YLKF</title> 
+<title>food</title> 
 <style>
 body
 {
@@ -21,7 +22,7 @@ body
     top:1000px;
 }
 [class*="col-"] {
-    float: left;
+    
     padding: 15px;
 }
 html {
@@ -117,7 +118,7 @@ html {
     color: #ffffff;
     text-align: center;
     font-size: 12px;
-    padding: 15px;
+    padding: 0px;
    	overflow:hidden;
 }
 
@@ -151,7 +152,7 @@ html {
 <center>
 <div class="sidebar">
  <ul>
- <li><a href="#">About YLKF</a></li>
+ <li><a href="https://zixxizxx.github.io/wd107b/exercise/final/29.html">About YLKF</a></li>
  <li><a href="#">Important Person</a></li>
  <li><a href="#">29th Memory</a></li>
  <li><a href="#">Activity</a></li>
@@ -159,7 +160,7 @@ html {
 </div>
 
 <div class="navbar">
-  <a href="#"><i class="fa fa-home"></i></a> 
+  <a href="https://zixxizxx.github.io/wd107b/exercise/final/ylkf.html"><i class="fa fa-home"></i></a> 
   <a href="https://www.facebook.com/YLKF29th/">NEWS</a>
   
 <div class="dropdown">
