--- a/exercise/final/29.html
+++ b/exercise/final/29.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>About YLKF</title> 
+<title>food</title> 
 <style type="text/css">
 body
 {
@@ -22,7 +22,7 @@ body
     top:1000px;
 }
 [class*="col-"] {
-    float: left;
+    
     padding: 15px;
 }
 html {
@@ -178,6 +178,7 @@ html {
 </style>
 </head>
 <body>
+
 <center>
 
 <div class="sidebar">
