--- a/exercise/final/ylkf.html
+++ b/exercise/final/ylkf.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>food</title> 
+<title>YLKF</title> 
 <style>
 body
 {
@@ -152,7 +152,7 @@ html {
 <center>
 <div class="sidebar">
  <ul>
- <li><a href="https://zixxizxx.github.io/wd107b/exercise/final/29.html">About YLKF</a></li>
+ <li><a href="https://zixxizxx.github.io/wd107b/exercise/final/29.html">About YLKF29TH</a></li>
  <li><a href="#">Important Person</a></li>
  <li><a href="#">29th Memory</a></li>
  <li><a href="#">Activity</a></li>
