--- a/exercise/final/29.html
+++ b/exercise/final/29.html
@@ -128,7 +128,7 @@ html {
   padding:10px;
   border:2px;
   background:#FFDDAA;
-  float:inherit;
+  float:left;
   margin-right:5px;
   margin:70px;
 }
@@ -138,7 +138,7 @@ html {
   padding:10px;
   border:2px;
   background:#FFDDAA;
-  float:inherit;
+  float:left;
   margin-right:5px;
   margin:30px;
 }
@@ -148,7 +148,7 @@ html {
   padding:10px;
   border:2px;
   background:#FFDDAA;
-  float:inherit;
+  float:left;
   margin-right:5px;
   margin:10px;
 }
