--- a/exercise/final/29.html
+++ b/exercise/final/29.html
@@ -183,7 +183,7 @@ html {
 
 <div class="sidebar">
  <ul>
- <li><a href="#">About YLKF</a></li>
+ <li><a href="https://zixxizxx.github.io/wd107b/exercise/final/29.html">About YLKF</a></li>
  <li><a href="#">Important Person</a></li>
  <li><a href="#">29th Memory</a></li>
  <li><a href="#">Activity</a></li>
@@ -191,7 +191,7 @@ html {
 </div>
 
 <div class="navbar">
-  <a href="#"><i class="fa fa-home"></i></a> 
+  <a href="https://zixxizxx.github.io/wd107b/exercise/final/ylkf.html"><i class="fa fa-home"></i></a> 
   <a href="https://www.facebook.com/YLKF29th/">NEWS</a>
   
 <div class="dropdown">
@@ -272,6 +272,7 @@ html {
     <h1>神遊</h1>
     <li>掉線王</li>
 </div>
+<hr size="5" align="center" noshade width="100%" color="#AAAAAA">
 
 <div class="footer">
 <p>一日康輔人,終生康輔魂</p>
